# anywhere-mesh

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  Taskfile.yml
.github/workflows/: docker-publish.yml
docs/: ALB.md  SECURITY_UPDATES.md  SERVICE_CONNECT.md
infra/: README.md  package-lock.json  params.json
infra/lib/: stack.ts
load-test/: README.md  env.example  http-baseline.js  http-smoke.js  http-soak.js  http-spike.js  ws-connect.js
mesh/: Cargo.toml
mesh/src/: commands.rs  lib.rs  main.rs
mesh/src/client/: client_impl.rs  mod.rs
mesh/src/client/aws/: mod.rs
mesh/src/client/proxy/: mod.rs  ws.rs
mesh/src/common/: auth.rs  config.rs  mod.rs  routing.rs  types.rs
mesh/src/server/: auth.rs  dispatcher.rs  error.rs  mod.rs  registry.rs  router.rs  service.rs  ws_proxy.rs
mesh/src/server/handlers/: alb.rs  health.rs  mod.rs  websocket.rs
test-app/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  run.sh
test-app/src/: main.rs
