[package]
name = "mesh"
version = "0.1.0"
edition = "2021"
authors = ["ktruck"]
description = "Unified CLI for Anywhere Mesh - service mesh for ECS Anywhere"
license = "MIT"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-ecs = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Dependencies for common module (formerly separate crate)
serde_yaml = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }

# Additional dependencies for CLI
