[package]
name = "test-app"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
mime_guess = "2.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
